Update JVM options to add native access and remove TopSecurityManager.